<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/device_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_start_shutdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_spinner"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_start_shutdown"
        android:onClick="onStartShutdownClick" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start_shutdown"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_restart"
        android:onClick="onRestartClick" />

    <Button
        android:id="@+id/btn_force_shutdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_restart"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_force_shutdown"
        android:onClick="onForceShutdownClick" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/update"
        android:layout_above="@+id/version_button"
        android:onClick="onUpdateClick" />

    <Button
        android:id="@+id/version_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/version" />

    <Button
        android:id="@+id/btn_add_device"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/version_button"
        android:text="Add Device" />

    <WebView
        android:id="@+id/webview"
        android:layout_width="wrap_content"
        android:layout_height="326dp"
        android:layout_above="@+id/update_button"
        android:layout_below="@+id/btn_force_shutdown"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

</RelativeLayout>
